# esp_ads1256

./: .gitignore  CMakeLists.txt  esp_ads1256.c  idf_component.yml
example/: sdkconfig.defaults
example/main/: CMakeLists.txt  header.c  header.h  main.c
include/: esp_ads1256.h
